--- a/libft/Makefile
+++ b/libft/Makefile
@@ -1,49 +1,44 @@
-SRCS =	ft_atoi.c ft_bzero.c ft_calloc.c ft_isalnum.c ft_isalpha.c \
-		ft_isascii.c ft_isdigit.c ft_isprint.c ft_memchr.c ft_memcmp.c \
-		ft_memcpy.c ft_memset.c ft_strchr.c ft_strdup.c ft_strjoin.c \
-		ft_strlcat.c ft_strlcpy.c ft_strlen.c ft_strmapi.c ft_strncmp.c \
-		ft_strrchr.c ft_strtrim.c ft_substr.c ft_tolower.c ft_toupper.c \
-		ft_itoa.c ft_itoa.c ft_split.c ft_putchar_fd.c ft_putendl_fd.c \
-		ft_putstr_fd.c ft_putnbr_fd.c ft_strnstr.c ft_memmove.c ft_striteri.c
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makecub->file                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: jlaazouz <jlaazouz@student.1337.ma>        +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2022/10/31 15:33:16 by jlaazouz          #+#    #+#              #
+#    Updated: 2023/10/08 21:25:18 by jlaazouz         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
 
-SRCS_BONUS =	ft_lstlast_bonus.c ft_lstadd_front_bonus.c ft_lstclear_bonus.c \
-				ft_lstdelone_bonus.c ft_lstiter_bonus.c ft_lstadd_back_bonus.c ft_lstmap_bonus.c \
-				ft_lstnew_bonus.c ft_lstsize_bonus.c
+NAME	= libft.a
 
-OBJS =	${SRCS:.c=.o}
+SRCS	=	ft_atoi.c ft_bzero.c ft_calloc.c ft_isalnum.c ft_isalpha.c ft_isascii.c ft_isdigit.c ft_isprint.c\
+			ft_itoa.c ft_memchr.c ft_memcmp.c ft_memcpy.c ft_memmove.c ft_memset.c ft_putchar_fd.c ft_putendl_fd.c\
+			ft_putnbr_fd.c ft_putstr_fd.c ft_split.c ft_strchr.c ft_strdup.c ft_striteri.c ft_strjoin.c ft_strlcat.c\
+			ft_strlcpy.c ft_strlen.c ft_strmapi.c ft_strncmp.c ft_strcmp.c ft_strnstr.c ft_strrchr.c ft_strtrim.c ft_substr.c\
+			ft_tolower.c ft_toupper.c\
+			ft_printf.c ft_ptr.c ft_putchar.c ft_putnbr_u.c ft_putnbr.c ft_putstr.c ft_hexa_convert.c ft_countdigit.c\
+			get_next_line.c get_next_line_utils.c\
 
-OBJS_BONUS =	${SRCS_BONUS:.c=.o}
+OBJS	= ${SRCS:.c=.o}
 
-NAME = 	libft.a
 
-GCC =	gcc
+CC		= cc
 
-FLAGS =	-Wall -Wextra -Werror
+CFLAGS	= -Wall -Wextra -Werror
 
-RM =	rm -f
+RM		= rm -f
 
-AR =	ar -rc
+all:		${NAME}
 
-%.o : %.c 
-		${GCC} ${FLAGS} -c $< -o $@
+${NAME} :	${OBJS}
+			@ar rcs ${NAME} ${OBJS}
 
-${NAME}: ${OBJS}
-		${AR} $@ $?
-		ranlib ${NAME}
-
-all:	${NAME}
 
 clean:
-		${RM} ${OBJS} ${OBJS_BONUS}
+			${RM} ${OBJS}
 
-fclean:	clean
-		${RM} ${NAME}
+fclean:		clean
+			${RM} ${NAME}
 
-re:	fclean all
-
-bonus: all ${OBJS_BONUS}
-		${AR} ${NAME} ${OBJS_BONUS}
-		ranlib ${NAME}
-
-.PHONY: all clean fclean re bonus
-
+re:			fclean all
